--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.0.0-rc-65e2784-20241218",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "6.22.3",
+    "@google/genai": "^1.37.0",
     "lucide-react": "0.344.0",
-    "@google/genai": "0.2.1"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router": "^6.30.3",
+    "react-router-dom": "^6.30.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
