--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "0.344.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "react-router": "^6.30.3",
     "react-router-dom": "^6.30.3"
   },
